--- a/package.json
+++ b/package.json
@@ -16,7 +16,14 @@
     "node": ">=5.4.0",
     "npm": ">=3.3.12"
   },
-  "scripts": {},
+  "scripts": {
+    "lint": "node scripts/lint.js"
+  },
   "dependencies": {},
-  "devDependencies": {}
+  "devDependencies": {
+    "babel-eslint": "^4.1.6",
+    "bluebird": "^3.1.2",
+    "eslint": "^1.10.3",
+    "standard": "^5.4.1"
+  }
 }
