--- a/package.json
+++ b/package.json
@@ -17,13 +17,19 @@
     "npm": ">=3.3.12"
   },
   "scripts": {
+    "build": "node scripts/build.js",
     "lint": "node scripts/lint.js"
   },
   "dependencies": {},
   "devDependencies": {
     "babel-eslint": "^4.1.6",
+    "babel-preset-es2015-rollup": "^1.1.1",
     "bluebird": "^3.1.2",
     "eslint": "^1.10.3",
+    "fs-extra": "^0.26.4",
+    "lodash": "^4.0.0",
+    "rollup": "^0.25.1",
+    "rollup-plugin-babel": "^2.3.9",
     "standard": "^5.4.1"
   }
 }
