--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bluebird": "^3.1.2",
     "eslint": "^1.10.3",
     "fs-extra": "^0.26.4",
+    "handlebars": "^4.0.5",
     "jsdom": "^7.2.2",
     "lodash": "^4.0.0",
     "mocha": "^2.3.4",
