--- a/bower.json
+++ b/bower.json
@@ -19,13 +19,25 @@
   ],
   "build-target": "dist/js/marionette-focuslist.js",
   "module-name": "focuslist",
-  "globals": {},
+  "globals": {
+    "animation": "animation",
+    "backbone": "Backbone",
+    "handlebars": "Handlebars",
+    "lodash": "_",
+    "marionette": "Marionette"
+  },
   "test-globals": {
     "mocha": "mocha",
     "chai": "chai",
     "focuslist": "focuslist"
   },
-  "dependencies": {},
+  "dependencies": {
+    "animation": "juriejan/animation",
+    "backbone.marionette": "marionette#~2.4.4",
+    "backbone": "~1.2.3",
+    "handlebars": "~4.0.5",
+    "lodash": "~4.0.0"
+  },
   "devDependencies": {
     "mocha": "~2.3.4",
     "chai": "~3.4.2"
