Added to bower package ignore

--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,11 @@
   "description": "",
   "ignore": [
     ".editorconfig",
-    ".gitignore"
+    ".gitignore",
+    "src",
+    "scripts",
+    "templates",
+    "test"
   ],
   "build-target": "dist/js/marionette-focuslist.js",
   "module-name": "focuslist",
